@@ -4,6 +4,11 @@
 
  * Drop support for Python 2.4 and 2.5. (Jelmer Vernooij)
 
+ API CHANGES
+
+ * Remove long deprecated ``Repo.commit``, ``Repo.get_blob``,
+   ``Repo.tree`` and ``Repo.tag``. (Jelmer Vernooij)
+
 0.9.4	2013-11-30
 
  IMPROVEMENTS
